edit on index and footer

--- a/insinhoputrapratama/index.html
+++ b/insinhoputrapratama/index.html
@@ -552,8 +552,8 @@
                 <div class="row h-100">
                   <div class="col-md-10 offset-md-1 col-lg-7 offset-lg-0 col-xl-6 col-xxl-5 text-center text-lg-start justify-content-center align-self-center align-items-start">
                     <h2 class="display-1 fs-56 mb-4 text-white animate__animated animate__slideInDown animate__delay-1s">PT Insinho Putra Pratama</h2>
-                    <p class="lead fs-23 lh-sm mb-7 text-white animate__animated animate__slideInRight animate__delay-2s">Your best solution for every logistic and shipment needs.</p>
-                    <div class="animate__animated animate__slideInUp animate__delay-3s"><a href="#" class="btn btn-lg btn-outline-white rounded-pill">Read More</a></div>
+                    <p class="lead fs-23 lh-sm mb-7 text-white animate__animated animate__slideInRight animate__delay-2s">SHIP REPAIR, TRANSPORTATION & LOGISTICS</p>
+                    <div class="animate__animated animate__slideInUp animate__delay-3s"><a href="./about.html" class="btn btn-lg btn-outline-white rounded-pill">Read More</a></div>
                   </div>
                   <!--/column -->
                 </div>
@@ -566,8 +566,9 @@
               <div class="container h-100">
                 <div class="row h-100">
                   <div class="col-md-11 col-lg-8 col-xl-7 col-xxl-6 mx-auto text-center justify-content-center align-self-center">
-                    <h2 class="display-1 fs-56 mb-4 text-white animate__animated animate__slideInDown animate__delay-1s">We are trusted by over a million customers.</h2>
-                    <p class="lead fs-23 lh-sm mb-7 text-white animate__animated animate__slideInRight animate__delay-2s">Here a few reasons why our customers choose us.</p>
+                    <h2 class="display-1 fs-56 mb-4 text-white animate__animated animate__slideInDown animate__delay-1s">PT Insinho Putra Pratama</h2>
+                    <p class="lead fs-23 lh-sm mb-7 text-white animate__animated animate__slideInRight animate__delay-2s">SHIP REPAIR, TRANSPORTATION & LOGISTICS</p>
+                    <div class="animate__animated animate__slideInUp animate__delay-3s"><a href="./about.html" class="btn btn-lg btn-outline-white rounded-pill">Read More</a></div>
                   </div>
                   <!--/column -->
                 </div>
@@ -580,9 +581,9 @@
               <div class="container h-100">
                 <div class="row h-100">
                   <div class="col-md-10 offset-md-1 col-lg-7 offset-lg-5 col-xl-6 offset-xl-6 col-xxl-5 offset-xxl-6 text-center text-lg-start justify-content-center align-self-center align-items-start">
-                    <h2 class="display-1 fs-56 mb-4 text-white animate__animated animate__slideInDown animate__delay-1s">Just sit and relax.</h2>
-                    <p class="lead fs-23 lh-sm mb-7 text-white animate__animated animate__slideInRight animate__delay-2s">We make sure your spending is stress free so that you can have the perfect control.</p>
-                    <div class="animate__animated animate__slideInUp animate__delay-3s"><a href="#" class="btn btn-lg btn-outline-white rounded-pill">Contact Us</a></div>
+                    <h2 class="display-1 fs-56 mb-4 text-white animate__animated animate__slideInDown animate__delay-1s">PT Insinho Putra Pratama</h2>
+                    <p class="lead fs-23 lh-sm mb-7 text-white animate__animated animate__slideInRight animate__delay-2s">SHIP REPAIR, TRANSPORTATION & LOGISTICS</p>
+                    <div class="animate__animated animate__slideInUp animate__delay-3s"><a href="./about.html" class="btn btn-lg btn-outline-white rounded-pill">Read More</a></div>
                   </div>
                   <!--/column -->
                 </div>
@@ -600,7 +601,7 @@
     </section>
     <section class="wrapper bg-light angled lower-end">
       <div class="container py-14 py-md-16">
-        <div class="row gx-lg-8 gx-xl-12 gy-10 mb-14 mb-md-17 align-items-center">
+        <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
           <div class="col-lg-6 position-relative order-lg-2">
             <div class="shape bg-dot primary rellax w-16 h-20" data-rellax-speed="1" style="top: 3rem; left: 5.5rem"></div>
             <div class="overlap-grid overlap-grid-2">
@@ -620,17 +621,17 @@
           <!--/column -->
         </div>
         <!--/.row -->
-        <div class="container pt-14 pb-12 pt-md-16 pb-md-14">
-          <div class="row gx-lg-8 gx-xl-12 gy-10 mb-lg-22 mb-xl-24 align-items-center">
+        <div class="container pt-14 pt-md-16">
+          <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
             <h2 class="display-4 mb-4 px-lg-14 text-center">Our Services</h2>
             <div class="col-lg-7 order-lg-2">
               <div class="row gx-md-5 gy-5">
                 <div class="col-md-5 offset-md-1 align-self-end">
                   <div class="card bg-pale-yellow">
                     <div class="card-body">
-                      <img src="./assets/img/icons/lineal/telephone-3.svg" class="icon-svg icon-svg-md text-yellow mb-3" alt="">
+                      <img src="./assets/img/icons/lineal/adjust.svg" class="svg-inject icon-svg icon-svg-sm text-primary" alt="" />
                       <h4>Ship Repair</h4>
-                      <p class="mb-0">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta.</p>
+                      <p class="mb-0">Elevate vessel performance with our top-notch repair services, ensuring reliability on the high seas.</p>
                     </div>
                     <!--/.card-body -->
                   </div>
@@ -642,7 +643,7 @@
                     <div class="card-body">
                       <img src="./assets/img/icons/lineal/truck.svg" class="svg-inject icon-svg icon-svg-sm text-primary" alt="" />
                       <h4>Transportation & Logistics</h4>
-                      <p class="mb-0">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta.</p>
+                      <p class="mb-0">Experience efficient and reliable cargo movement tailored to your needs, delivering on time, every time.</p>
                     </div>
                     <!--/.card-body -->
                   </div>
@@ -652,9 +653,9 @@
                 <div class="col-md-5">
                   <div class="card bg-pale-leaf">
                     <div class="card-body">
-                      <img src="./assets/img/icons/lineal/cloud-computing-3.svg" class="icon-svg icon-svg-md text-leaf mb-3" alt="">
-                      <h4>Eksport & Import</h4>
-                      <p class="mb-0">Nulla vitae elit libero, a pharetra augue.</p>
+                      <img src="./assets/img/icons/lineal/paper-plane.svg" class="svg-inject icon-svg icon-svg-sm text-primary" alt="" />
+                      <h4>Export & Import</h4>
+                      <p class="mb-0">Navigate global trade effortlessly with our expert guidance, ensuring smooth transactions and compliance.</p>
                     </div>
                     <!--/.card-body -->
                   </div>
@@ -666,7 +667,7 @@
                     <div class="card-body">
                       <img src="./assets/img/icons/lineal/shield.svg" class="svg-inject icon-svg icon-svg-sm text-primary" alt="" />
                       <h4>Custom Clearance</h4>
-                      <p class="mb-0">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget.</p>
+                      <p class="mb-0">Simplify the complexities of customs processes with our dedicated services, minimizing delays and ensuring regulatory compliance.</p>
                     </div>
                     <!--/.card-body -->
                   </div>
@@ -680,93 +681,13 @@
             <div class="col-lg-5">
               <h2 class="fs-15 text-uppercase text-muted mb-3">What We Do?</h2>
               <h3 class="display-4 mb-5">The service we offer is specifically designed to meet your needs.</h3>
-              <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
-              <a href="#" class="btn btn-navy rounded-pill mt-3">More Details</a>
+              <p>At PT Insinho Putra Pratama, we focus on making things work uniquely for you. Our aim is to provide solutions that match exactly what you're looking for. Count on us to simplify the process and ensure our services align perfectly with your requirements.</p>
+              <a href="./projects.html" class="btn btn-navy rounded-pill mt-3">Show our Projects</a>
             </div>
             <!--/column -->
           </div>
           <!--/.row -->
         </div>
-        <div class="row mb-5">
-          <div class="col-md-10 col-xl-8 col-xxl-7 mx-auto text-center">
-            <img src="./assets/img/icons/lineal/list.svg" class="svg-inject icon-svg icon-svg-md mb-4" alt="" />
-            <h2 class="display-4 mb-4 px-lg-14">Our Services</h2>
-          </div>
-          <!-- /column -->
-        </div>
-        <!-- /.row -->
-        <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
-          <div class="col-lg-6 order-lg-2">
-            <div class="card me-lg-6">
-              <div class="card-body p-6">
-                <div class="d-flex flex-row">
-                  <div>
-                    <span class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-4"><span class="number">01</span></span>
-                  </div>
-                  <div>
-                    <h4 class="mb-1">Ship Repair</h4>
-                    <p class="mb-0">From origin to destination, we ensure your goods reach their target with precision and care. Our cutting-edge tracking systems provide real-time updates, giving you peace of mind at every stage.</p>
-                  </div>
-                </div>
-              </div>
-              <!--/.card-body -->
-            </div>
-            <!--/.card -->
-            <div class="card ms-lg-13 mt-6">
-              <div class="card-body p-6">
-                <div class="d-flex flex-row">
-                  <div>
-                    <span class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-4"><span class="number">02</span></span>
-                  </div>
-                  <div>
-                    <h4 class="mb-1">Transportation and Logistics</h4>
-                    <p class="mb-0">Every business is unique, and so are its logistics needs. Our team works closely with you to design personalized solutions that streamline your supply chain, reduce costs, and enhance overall efficiency.</p>
-                  </div>
-                </div>
-              </div>
-              <!--/.card-body -->
-            </div>
-            <!--/.card -->
-            <div class="card mx-lg-6 mt-6">
-              <div class="card-body p-6">
-                <div class="d-flex flex-row">
-                  <div>
-                    <span class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-4"><span class="number">03</span></span>
-                  </div>
-                  <div>
-                    <h4 class="mb-1">Export and Import</h4>
-                    <p class="mb-0">Whether you're shipping across town or across borders, our global network ensures your cargo is in safe hands. We combine international expertise with a local approach, ensuring smooth operations wherever your business takes you.</p>
-                  </div>
-                </div>
-              </div>
-              <!--/.card-body -->
-            </div>
-            <!--/.card -->
-            <!--/.card -->
-            <div class="card mx-lg-6 mt-6">
-              <div class="card-body p-6">
-                <div class="d-flex flex-row">
-                  <div>
-                    <span class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-4"><span class="number">04</span></span>
-                  </div>
-                  <div>
-                    <h4 class="mb-1">Custom Clearance</h4>
-                    <p class="mb-0">Whether you're shipping across town or across borders, our global network ensures your cargo is in safe hands. We combine international expertise with a local approach, ensuring smooth operations wherever your business takes you.</p>
-                  </div>
-                </div>
-              </div>
-              <!--/.card-body -->
-            </div>
-          </div>
-          <!--/column -->
-          <div class="col-lg-6">
-            <h2 class="display-6 mb-3">How It Works?</h2>
-            <p class="lead fs-lg pe-lg-5">Find out everything you need to know and more about how we create our business process models.</p>
-            <a href="./about.html" class="btn btn-primary rounded-pill mb-0">Learn More</a>
-          </div>
-          <!--/column -->
-        </div>
-        <!--/.row -->
       </div>
       <!-- /.container -->
     </section>
@@ -832,7 +753,7 @@
     <div class="container py-13 py-md-15">
       <div class="row gy-6 gy-lg-0">
         <!-- /column -->
-        <div class="col-md-6 col-lg-6">
+        <div class="col-md-4 col-lg-4">
           <div class="widget">
             <h4 class="widget-title mb-3 text-white">Learn More</h4>
             <ul class="list-unstyled mb-0">
@@ -844,11 +765,25 @@
           <!-- /.widget -->
         </div>
         <!-- /column -->
-        <div class="col-md-6 col-lg-6">
-          <div class="widget">
-            <h4 class="widget-title mb-3 text-white">Address</h4>
-            <address>Jl. Muara Baru Ujung Blok A No. 1<br>Kel. Penjaringan Kec. Penjaringan - Jakarta Utara 14440</address>
-            <a href="mailto:first.last@email.com">info@email.com</a><br /> Telp. (021) 6669 7070
+        <div class="col-md-8 col-lg-8">
+            <h4 class="widget-title mb-3 text-white">CONTACT US</h4>
+            <div class="widget">
+                <div class="row">
+                    <div class="col-md-6 col-lg-6">
+                        <address><strong>Headquarters :</strong></address>
+                        <address>l. Muara Baru Ujung Blok A No. 1<br>												
+                        Kelurahan Penjaringan Kecamatan Penjaringan<br> 																	
+                        Jakarta Utara 14440<br>																	
+                        Tlp. (021) 6669 7070</address>
+                    </div>
+                    <div class="col-md-6 col-lg-6">
+                        <address><strong>Operations Office :</strong></address>
+                        <address>Grand Galaxy City<br>															
+                        Ruko Sentra Niaga (RSN) 1 No. 27<br>
+                        Kelurahan Jakasetia Kecamatan Pekayon<br>
+                        Bekasi Jawa Barat</address>
+                    </div>
+                </div>           
           </div>
           <!-- /.widget -->
         </div>
@@ -857,6 +792,7 @@
       <div class="row gy-6 gy-lg-0">
         <div class="col-lg-12">
           <div class="widget">
+            <a href="mailto:first.last@email.com">info@email.com</a><br /> Telp. (021) 6669 7070
             <p class="mb-3 mt-5">© 2023 PT Insinho Putra Pratama. All rights reserved.</p>
             <!-- /.social -->
           </div>
