--- a/insinhoputrapratama/about.html
+++ b/insinhoputrapratama/about.html
@@ -550,7 +550,7 @@
     <!-- /section -->
     <section class="wrapper bg-light angled lower-end">
       <div class="container py-14 py-md-16">
-        <div class="row gx-lg-8 gx-xl-12 gy-10 mb-14 mb-md-17 align-items-center">
+        <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
           <div class="col-lg-6 position-relative order-lg-2">
             <div class="shape bg-dot primary rellax w-16 h-20" data-rellax-speed="1" style="top: 3rem; left: 5.5rem"></div>
             <div class="overlap-grid overlap-grid-2">
@@ -562,94 +562,81 @@
           <!--/column -->
           <div class="col-lg-6">
             <img src="./assets/img/icons/lineal/megaphone.svg" class="svg-inject icon-svg icon-svg-md mb-4" alt="" />
-            <h2 class="display-4 mb-3">Who Are We?</h2>
-            <p class="lead fs-lg">At PT Insinho Putra Pratama, we understand that the heart of successful business lies in seamless logistics. As your dedicated logistics partner, we bring efficiency, reliability, and innovation to every step of your supply chain.</p>
-            <div class="row gy-3 gx-xl-8">
-              <div class="col-xl-6">
-                <ul class="icon-list bullet-bg bullet-soft-primary mb-0">
-                  <li><span><i class="uil uil-check"></i></span><span>Freight Forwarding</span></li>
-                  <li class="mt-3"><span><i class="uil uil-check"></i></span><span>Warehousing and Distribution</span></li>
-                </ul>
-              </div>
-              <!--/column -->
-              <div class="col-xl-6">
-                <ul class="icon-list bullet-bg bullet-soft-primary mb-0">
-                  <li><span><i class="uil uil-check"></i></span><span>Last-Mile Delivery</span></li>
-                  <li class="mt-3"><span><i class="uil uil-check"></i></span><span>Technology Integration</span></li>
-                </ul>
-              </div>
-              <!--/column -->
-            </div>
+            <h2 class="display-4 mb-3">ABOUT US</h2>
+            <p class="lead fs-lg">PT Insinho is a private company in Indonesia which operates in the fields of ship repair, transportation, logistics, export and import of goods, and custom clearance.<br>
+              Founded in 2012, PT Insinho has a lot of work experience and a logistics distribution network so that it provides the best solutions for every project.</p>
             <!--/.row -->
           </div>
           <!--/column -->
         </div>
         <!--/.row -->
-        <div class="row mb-5">
-          <div class="col-md-10 col-xl-8 col-xxl-7 mx-auto text-center">
-            <img src="./assets/img/icons/lineal/list.svg" class="svg-inject icon-svg icon-svg-md mb-4" alt="" />
-            <h2 class="display-4 mb-4 px-lg-14">Here are our commitments to ensure the business flow runs smoothly</h2>
+        <div class="container pt-14 pt-md-16">
+          <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
+            <h2 class="display-4 mb-4 px-lg-14 text-center">Our Services</h2>
+            <div class="col-lg-7 order-lg-2">
+              <div class="row gx-md-5 gy-5">
+                <div class="col-md-5 offset-md-1 align-self-end">
+                  <div class="card bg-pale-yellow">
+                    <div class="card-body">
+                      <img src="./assets/img/icons/lineal/adjust.svg" class="svg-inject icon-svg icon-svg-sm text-primary" alt="" />
+                      <h4>Ship Repair</h4>
+                      <p class="mb-0">Elevate vessel performance with our top-notch repair services, ensuring reliability on the high seas.</p>
+                    </div>
+                    <!--/.card-body -->
+                  </div>
+                  <!--/.card -->
+                </div>
+                <!--/column -->
+                <div class="col-md-6 align-self-end">
+                  <div class="card bg-pale-red">
+                    <div class="card-body">
+                      <img src="./assets/img/icons/lineal/truck.svg" class="svg-inject icon-svg icon-svg-sm text-primary" alt="" />
+                      <h4>Transportation & Logistics</h4>
+                      <p class="mb-0">Experience efficient and reliable cargo movement tailored to your needs, delivering on time, every time.</p>
+                    </div>
+                    <!--/.card-body -->
+                  </div>
+                  <!--/.card -->
+                </div>
+                <!--/column -->
+                <div class="col-md-5">
+                  <div class="card bg-pale-leaf">
+                    <div class="card-body">
+                      <img src="./assets/img/icons/lineal/paper-plane.svg" class="svg-inject icon-svg icon-svg-sm text-primary" alt="" />
+                      <h4>Export & Import</h4>
+                      <p class="mb-0">Navigate global trade effortlessly with our expert guidance, ensuring smooth transactions and compliance.</p>
+                    </div>
+                    <!--/.card-body -->
+                  </div>
+                  <!--/.card -->
+                </div>
+                <!--/column -->
+                <div class="col-md-6 align-self-start">
+                  <div class="card bg-pale-primary">
+                    <div class="card-body">
+                      <img src="./assets/img/icons/lineal/shield.svg" class="svg-inject icon-svg icon-svg-sm text-primary" alt="" />
+                      <h4>Custom Clearance</h4>
+                      <p class="mb-0">Simplify the complexities of customs processes with our dedicated services, minimizing delays and ensuring regulatory compliance.</p>
+                    </div>
+                    <!--/.card-body -->
+                  </div>
+                  <!--/.card -->
+                </div>
+                <!--/column -->
+              </div>
+              <!--/.row -->
+            </div>
+            <!--/column -->
+            <div class="col-lg-5">
+              <h2 class="fs-15 text-uppercase text-muted mb-3">What We Do?</h2>
+              <h3 class="display-4 mb-5">The service we offer is specifically designed to meet your needs.</h3>
+              <p>At PT Insinho Putra Pratama, we focus on making things work uniquely for you. Our aim is to provide solutions that match exactly what you're looking for. Count on us to simplify the process and ensure our services align perfectly with your requirements.</p>
+              <a href="./projects.html" class="btn btn-navy rounded-pill mt-3">Show our Projects</a>
+            </div>
+            <!--/column -->
           </div>
-          <!-- /column -->
+          <!--/.row -->
         </div>
-        <!-- /.row -->
-        <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
-          <div class="col-lg-6 order-lg-2">
-            <div class="card me-lg-6">
-              <div class="card-body p-6">
-                <div class="d-flex flex-row">
-                  <div>
-                    <span class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-4"><span class="number">01</span></span>
-                  </div>
-                  <div>
-                    <h4 class="mb-1">Precision in Motion</h4>
-                    <p class="mb-0">From origin to destination, we ensure your goods reach their target with precision and care. Our cutting-edge tracking systems provide real-time updates, giving you peace of mind at every stage.</p>
-                  </div>
-                </div>
-              </div>
-              <!--/.card-body -->
-            </div>
-            <!--/.card -->
-            <div class="card ms-lg-13 mt-6">
-              <div class="card-body p-6">
-                <div class="d-flex flex-row">
-                  <div>
-                    <span class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-4"><span class="number">02</span></span>
-                  </div>
-                  <div>
-                    <h4 class="mb-1">Tailored Solutions</h4>
-                    <p class="mb-0">Every business is unique, and so are its logistics needs. Our team works closely with you to design personalized solutions that streamline your supply chain, reduce costs, and enhance overall efficiency.</p>
-                  </div>
-                </div>
-              </div>
-              <!--/.card-body -->
-            </div>
-            <!--/.card -->
-            <div class="card mx-lg-6 mt-6">
-              <div class="card-body p-6">
-                <div class="d-flex flex-row">
-                  <div>
-                    <span class="icon btn btn-circle btn-lg btn-soft-primary pe-none me-4"><span class="number">03</span></span>
-                  </div>
-                  <div>
-                    <h4 class="mb-1">Global Reach, Local Touch</h4>
-                    <p class="mb-0">Whether you're shipping across town or across borders, our global network ensures your cargo is in safe hands. We combine international expertise with a local approach, ensuring smooth operations wherever your business takes you.</p>
-                  </div>
-                </div>
-              </div>
-              <!--/.card-body -->
-            </div>
-            <!--/.card -->
-          </div>
-          <!--/column -->
-          <div class="col-lg-6">
-            <h2 class="display-6 mb-3">How It Works?</h2>
-            <p class="lead fs-lg pe-lg-5">Find out everything you need to know and more about how we create our business process models.</p>
-            <a href="/about.html" class="btn btn-primary rounded-pill mb-0">Learn More</a>
-          </div>
-          <!--/column -->
-        </div>
-        <!--/.row -->
       </div>
       <!-- /.container -->
     </section>
