--- a/insinhoputrapratama/index.html
+++ b/insinhoputrapratama/index.html
@@ -757,9 +757,9 @@
           <div class="widget">
             <h4 class="widget-title mb-3 text-white">Learn More</h4>
             <ul class="list-unstyled mb-0">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Our Story</a></li>
-              <li><a href="#">Projects</a></li>
+              <li><a href="./about.html">About Us</a></li>
+              <li><a href="./clients.html">Our Clients</a></li>
+              <li><a href="./projects.html">Projects</a></li>
             </ul>
           </div>
           <!-- /.widget -->
@@ -792,7 +792,10 @@
       <div class="row gy-6 gy-lg-0">
         <div class="col-lg-12">
           <div class="widget">
-            <a href="mailto:first.last@email.com">info@email.com</a><br /> Telp. (021) 6669 7070
+            <a href="mailto:operations@insinho.co.id">operations@insinho.co.id</a><br /> 
+            <a href="mailto:marketing@insinho.co.id">marketing@insinho.co.id</a><br /> 
+            <a href="mailto:finance@insinho.co.id">finance@insinho.co.id</a><br /> 
+            Telp. (021) 6669 7070
             <p class="mb-3 mt-5">© 2023 PT Insinho Putra Pratama. All rights reserved.</p>
             <!-- /.social -->
           </div>
