--- a/insinhoputrapratama/projects.html
+++ b/insinhoputrapratama/projects.html
@@ -693,75 +693,55 @@
   <footer class="bg-dark text-inverse">
     <div class="container py-13 py-md-15">
       <div class="row gy-6 gy-lg-0">
-        <div class="col-md-4 col-lg-3">
-          <div class="widget">
-            <img class="mb-4" src="./assets/img/logo-light.png" srcset="./assets/img/logo-light@2x.png 2x" alt="" />
-            <p class="mb-4">© 2023 Sandbox. <br class="d-none d-lg-block" />All rights reserved.</p>
-            <nav class="nav social social-white">
-              <a href="#"><i class="uil uil-twitter"></i></a>
-              <a href="#"><i class="uil uil-facebook-f"></i></a>
-              <a href="#"><i class="uil uil-dribbble"></i></a>
-              <a href="#"><i class="uil uil-instagram"></i></a>
-              <a href="#"><i class="uil uil-youtube"></i></a>
-            </nav>
-            <!-- /.social -->
-          </div>
-          <!-- /.widget -->
-        </div>
         <!-- /column -->
-        <div class="col-md-4 col-lg-3">
+        <div class="col-md-4 col-lg-4">
           <div class="widget">
-            <h4 class="widget-title text-white mb-3">Get in Touch</h4>
-            <address class="pe-xl-15 pe-xxl-17">Moonshine St. 14/05 Light City, London, United Kingdom</address>
-            <a href="mailto:#">info@email.com</a><br /> 00 (123) 456 78 90
-          </div>
-          <!-- /.widget -->
-        </div>
-        <!-- /column -->
-        <div class="col-md-4 col-lg-3">
-          <div class="widget">
-            <h4 class="widget-title text-white mb-3">Learn More</h4>
-            <ul class="list-unstyled  mb-0">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Our Story</a></li>
-              <li><a href="#">Projects</a></li>
-              <li><a href="#">Terms of Use</a></li>
-              <li><a href="#">Privacy Policy</a></li>
+            <h4 class="widget-title mb-3 text-white">Learn More</h4>
+            <ul class="list-unstyled mb-0">
+              <li><a href="./about.html">About Us</a></li>
+              <li><a href="./clients.html">Our Clients</a></li>
+              <li><a href="./projects.html">Projects</a></li>
             </ul>
           </div>
           <!-- /.widget -->
         </div>
         <!-- /column -->
-        <div class="col-md-12 col-lg-3">
-          <div class="widget">
-            <h4 class="widget-title text-white mb-3">Our Newsletter</h4>
-            <p class="mb-5">Subscribe to our newsletter to get our news & deals delivered to you.</p>
-            <div class="newsletter-wrapper">
-              <!-- Begin Mailchimp Signup Form -->
-              <div id="mc_embed_signup2">
-                <form action="https://elemisfreebies.us20.list-manage.com/subscribe/post?u=aa4947f70a475ce162057838d&amp;id=b49ef47a9a" method="post" id="mc-embedded-subscribe-form2" name="mc-embedded-subscribe-form" class="validate dark-fields" target="_blank" novalidate>
-                  <div id="mc_embed_signup_scroll2">
-                    <div class="mc-field-group input-group form-floating">
-                      <input type="email" value="" name="EMAIL" class="required email form-control" placeholder="Email Address" id="mce-EMAIL2">
-                      <label for="mce-EMAIL2">Email Address</label>
-                      <input type="submit" value="Join" name="subscribe" id="mc-embedded-subscribe2" class="btn btn-primary ">
+        <div class="col-md-8 col-lg-8">
+            <h4 class="widget-title mb-3 text-white">CONTACT US</h4>
+            <div class="widget">
+                <div class="row">
+                    <div class="col-md-6 col-lg-6">
+                        <address><strong>Headquarters :</strong></address>
+                        <address>l. Muara Baru Ujung Blok A No. 1<br>												
+                        Kelurahan Penjaringan Kecamatan Penjaringan<br> 																	
+                        Jakarta Utara 14440<br>																	
+                        Tlp. (021) 6669 7070</address>
                     </div>
-                    <div id="mce-responses2" class="clear">
-                      <div class="response" id="mce-error-response2" style="display:none"></div>
-                      <div class="response" id="mce-success-response2" style="display:none"></div>
-                    </div> <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ddc180777a163e0f9f66ee014_4b1bcfa0bc" tabindex="-1" value=""></div>
-                    <div class="clear"></div>
-                  </div>
-                </form>
-              </div>
-              <!--End mc_embed_signup-->
-            </div>
-            <!-- /.newsletter-wrapper -->
+                    <div class="col-md-6 col-lg-6">
+                        <address><strong>Operations Office :</strong></address>
+                        <address>Grand Galaxy City<br>															
+                        Ruko Sentra Niaga (RSN) 1 No. 27<br>
+                        Kelurahan Jakasetia Kecamatan Pekayon<br>
+                        Bekasi Jawa Barat</address>
+                    </div>
+                </div>           
           </div>
           <!-- /.widget -->
         </div>
         <!-- /column -->
+      </div>
+      <div class="row gy-6 gy-lg-0">
+        <div class="col-lg-12">
+          <div class="widget">
+            <a href="mailto:operations@insinho.co.id">operations@insinho.co.id</a><br /> 
+            <a href="mailto:marketing@insinho.co.id">marketing@insinho.co.id</a><br /> 
+            <a href="mailto:finance@insinho.co.id">finance@insinho.co.id</a><br /> 
+            Telp. (021) 6669 7070
+            <p class="mb-3 mt-5">© 2023 PT Insinho Putra Pratama. All rights reserved.</p>
+            <!-- /.social -->
+          </div>
+          <!-- /.widget -->
+        </div>
       </div>
       <!--/.row -->
     </div>
