--- a/insinhoputrapratama/index.html
+++ b/insinhoputrapratama/index.html
@@ -771,7 +771,7 @@
                 <div class="row">
                     <div class="col-md-6 col-lg-6">
                         <address><strong>Headquarters :</strong></address>
-                        <address>l. Muara Baru Ujung Blok A No. 1<br>												
+                        <address>Jl. Muara Baru Ujung Blok A No. 1<br>												
                         Kelurahan Penjaringan Kecamatan Penjaringan<br> 																	
                         Jakarta Utara 14440<br>																	
                         Tlp. (021) 6669 7070</address>
