--- a/insinhoputrapratama/about.html
+++ b/insinhoputrapratama/about.html
@@ -783,23 +783,37 @@
     <div class="container py-13 py-md-15">
       <div class="row gy-6 gy-lg-0">
         <!-- /column -->
-        <div class="col-md-6 col-lg-6">
+        <div class="col-md-4 col-lg-4">
           <div class="widget">
             <h4 class="widget-title mb-3 text-white">Learn More</h4>
             <ul class="list-unstyled mb-0">
               <li><a href="./about.html">About Us</a></li>
-              <li><a href="#">Clients</a></li>
+              <li><a href="./clients.html">Our Clients</a></li>
               <li><a href="./projects.html">Projects</a></li>
             </ul>
           </div>
           <!-- /.widget -->
         </div>
         <!-- /column -->
-        <div class="col-md-6 col-lg-6">
-          <div class="widget">
-            <h4 class="widget-title mb-3 text-white">Address</h4>
-            <address>Jl. Muara Baru Ujung Blok A No. 1<br>Kel. Penjaringan Kec. Penjaringan - Jakarta Utara 14440</address>
-            <a href="mailto:first.last@email.com">info@email.com</a><br /> Telp. (021) 6669 7070
+        <div class="col-md-8 col-lg-8">
+            <h4 class="widget-title mb-3 text-white">CONTACT US</h4>
+            <div class="widget">
+                <div class="row">
+                    <div class="col-md-6 col-lg-6">
+                        <address><strong>Headquarters :</strong></address>
+                        <address>Jl. Muara Baru Ujung Blok A No. 1<br>												
+                        Kelurahan Penjaringan Kecamatan Penjaringan<br> 																	
+                        Jakarta Utara 14440<br>																	
+                        Tlp. (021) 6669 7070</address>
+                    </div>
+                    <div class="col-md-6 col-lg-6">
+                        <address><strong>Operations Office :</strong></address>
+                        <address>Grand Galaxy City<br>															
+                        Ruko Sentra Niaga (RSN) 1 No. 27<br>
+                        Kelurahan Jakasetia Kecamatan Pekayon<br>
+                        Bekasi Jawa Barat</address>
+                    </div>
+                </div>           
           </div>
           <!-- /.widget -->
         </div>
@@ -808,6 +822,10 @@
       <div class="row gy-6 gy-lg-0">
         <div class="col-lg-12">
           <div class="widget">
+            <a href="mailto:operations@insinho.co.id">operations@insinho.co.id</a><br /> 
+            <a href="mailto:marketing@insinho.co.id">marketing@insinho.co.id</a><br /> 
+            <a href="mailto:finance@insinho.co.id">finance@insinho.co.id</a><br /> 
+            Telp. (021) 6669 7070
             <p class="mb-3 mt-5">© 2023 PT Insinho Putra Pratama. All rights reserved.</p>
             <!-- /.social -->
           </div>
