--- a/insinhoputrapratama/about.html
+++ b/insinhoputrapratama/about.html
@@ -772,7 +772,7 @@
           <!-- /.row -->
         </div>
         <!-- /.grid -->
-        <a href="/projects.html" class="btn btn-primary rounded-pill mb-0 mt-5">Show all Projects</a>
+        <a href="./projects.html" class="btn btn-primary rounded-pill mb-0 mt-5">Show all Projects</a>
       </div>
       <!-- /.container -->
     </section>
