--- a/insinhoputrapratama/about.html
+++ b/insinhoputrapratama/about.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="PT.Insinho Putra Pratama">
+  <meta name="description" content="PT.Insinho Putra Pratama - About">
   <meta name="keywords" content="">
   <meta name="author" content="elemis">
-  <title>PT. Insinho Putra Pratama</title>
+  <title>PT. Insinho Putra Pratama - About</title>
   <link rel="shortcut icon" href="./assets/img/favicon.png">
   <link rel="stylesheet" href="./assets/css/plugins.css">
   <link rel="stylesheet" href="./assets/css/style.css">
