--- a/insinhoputrapratama/projects.html
+++ b/insinhoputrapratama/projects.html
@@ -185,6 +185,42 @@
               </figure>
             </div>
             <!-- /.project -->
+            <!-- /.project -->
+            <div class="project item col-md-6 col-xl-4 shipment">
+              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo13.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo13.webp" alt="" /></a>
+                <figcaption>
+                  <h5 class="from-top mb-0">Sollicitudin Pharetra</h5>
+                </figcaption>
+              </figure>
+            </div>
+            <!-- /.project -->
+            <!-- /.project -->
+            <div class="project item col-md-6 col-xl-4 shipment">
+              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo14.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo14.webp" alt="" /></a>
+                <figcaption>
+                  <h5 class="from-top mb-0">Sollicitudin Pharetra</h5>
+                </figcaption>
+              </figure>
+            </div>
+            <!-- /.project -->
+            <!-- /.project -->
+            <div class="project item col-md-6 col-xl-4 logistic">
+              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo15.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo15.webp" alt="" /></a>
+                <figcaption>
+                  <h5 class="from-top mb-0">Sollicitudin Pharetra</h5>
+                </figcaption>
+              </figure>
+            </div>
+            <!-- /.project -->
+            <!-- /.project -->
+            <div class="project item col-md-6 col-xl-4 logistic">
+              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo16.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo16.webp" alt="" /></a>
+                <figcaption>
+                  <h5 class="from-top mb-0">Sollicitudin Pharetra</h5>
+                </figcaption>
+              </figure>
+            </div>
+            <!-- /.project -->
           </div>
           <!-- /.row -->
         </div>
