--- a/insinhoputrapratama/about.html
+++ b/insinhoputrapratama/about.html
@@ -34,6 +34,7 @@
                 <li class="nav-item"><a class="nav-link" href="./about.html">About Us</a></li>
                 <li class="nav-item"><a class="nav-link" href="./clients.html">Clients</a></li>
                 <li class="nav-item"><a class="nav-link" href="./projects.html">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
               </ul>
               <!-- /.navbar-nav -->
               <!-- /.offcanvas-footer -->
@@ -42,15 +43,13 @@
           </div>
           <!-- /.navbar-collapse -->
           <div class="navbar-other w-100 d-flex ms-auto">
-            <li class="nav-item d-none d-md-block">
-              <a href="./contact.html" class="btn btn-sm btn-primary rounded-pill">Contact</a>
-            </li>
-            <li class="nav-item d-lg-none">
-              <button class="hamburger offcanvas-nav-btn"><span></span></button>
-            </li>
-          </ul>
-          <!-- /.navbar-nav -->
-        </div>
+            <div class="navbar-other w-100 d-flex ms-auto">
+              <ul class="navbar-nav flex-row align-items-center ms-auto">
+                <li class="nav-item d-lg-none">
+                  <button class="hamburger offcanvas-nav-btn"><span></span></button>
+                </li>
+              </ul>
+          </div>
         <!-- /.navbar-other -->
         </div>
         <!-- /.container -->
@@ -89,7 +88,7 @@
             <h2 class="display-4 mb-4 px-lg-14 text-center">Our Services</h2>
             <div class="col-lg-7 order-lg-2">
               <div class="row gx-md-5 gy-5">
-                <div class="col-md-5 offset-md-1 align-self-end">
+                <div class="col-md-6 align-self-end">
                   <div class="card bg-pale-yellow">
                     <div class="card-body">
                       <img src="./assets/img/icons/lineal/adjust.svg" class="svg-inject icon-svg icon-svg-sm text-primary" alt="" />
@@ -113,7 +112,7 @@
                   <!--/.card -->
                 </div>
                 <!--/column -->
-                <div class="col-md-5">
+                <div class="col-md-6">
                   <div class="card bg-pale-leaf">
                     <div class="card-body">
                       <img src="./assets/img/icons/lineal/paper-plane.svg" class="svg-inject icon-svg icon-svg-sm text-primary" alt="" />
