--- a/insinhoputrapratama/projects.html
+++ b/insinhoputrapratama/projects.html
@@ -34,6 +34,7 @@
                 <li class="nav-item"><a class="nav-link" href="./about.html">About Us</a></li>
                 <li class="nav-item"><a class="nav-link" href="./clients.html">Clients</a></li>
                 <li class="nav-item"><a class="nav-link" href="./projects.html">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
               </ul>
               <!-- /.navbar-nav -->
             </div>
@@ -41,14 +42,11 @@
           </div>
           <!-- /.navbar-collapse -->
           <div class="navbar-other w-100 d-flex ms-auto">
-              <li class="nav-item d-none d-md-block">
-                <a href="./contact.html" class="btn btn-sm btn-primary rounded-pill">Contact</a>
-              </li>
+            <ul class="navbar-nav flex-row align-items-center ms-auto">
               <li class="nav-item d-lg-none">
                 <button class="hamburger offcanvas-nav-btn"><span></span></button>
               </li>
             </ul>
-            <!-- /.navbar-nav -->
           </div>
           <!-- /.navbar-other -->
         </div>
@@ -57,21 +55,6 @@
       <!-- /.navbar -->
     </header>
     <!-- /header -->
-    <section class="section-frame overflow-hidden">
-      <div class="wrapper bg-gray">
-        <div class="container py-13 py-md-17 text-center">
-          <div class="row">
-            <div class="col-lg-10 col-xxl-8 mx-auto">
-              <h1 class="display-1 mb-1">Check out some of our Recent Projects.</h1>
-            </div>
-            <!-- /column -->
-          </div>
-          <!-- /.row -->
-        </div>
-        <!-- /.container -->
-      </div>
-      <!-- /.wrapper -->
-    </section>
     <!-- /section -->
     <section class="wrapper bg-light">
       <div class="container py-14 py-md-16 text-center">
