--- a/insinhoputrapratama/clients.html
+++ b/insinhoputrapratama/clients.html
@@ -20,7 +20,7 @@
             <div class="container flex-lg-row flex-nowrap align-items-center">
               <div class="navbar-brand w-100">
                 <a href="./index.html">
-                  <img src="./assets/img/logo-dark.png" style="max-width: 90px;" srcset="./assets/img/logo@2x.png 2x" alt="" />
+                  <img src="./assets/img/logo-dark.png" style="max-width: 90px;" srcset="./assets/img/logo-dark.png" alt="" />
                 </a>
               </div>
               <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
