--- a/insinhoputrapratama/about.html
+++ b/insinhoputrapratama/about.html
@@ -90,7 +90,7 @@
               <div class="row gx-md-5 gy-5">
                 <div class="col-md-6 align-self-end">
                   <div class="card bg-pale-yellow">
-                    <div class="card-body">
+                    <div class="card-body card-services">
                       <img src="./assets/img/icons/lineal/adjust.svg" class="svg-inject icon-svg icon-svg-sm text-primary" alt="" />
                       <h4>Ship Repair</h4>
                       <p class="mb-0">Elevate vessel performance with our top-notch repair services, ensuring reliability on the high seas.</p>
@@ -102,7 +102,7 @@
                 <!--/column -->
                 <div class="col-md-6 align-self-end">
                   <div class="card bg-pale-red">
-                    <div class="card-body">
+                    <div class="card-body card-services">
                       <img src="./assets/img/icons/lineal/truck.svg" class="svg-inject icon-svg icon-svg-sm text-primary" alt="" />
                       <h4>Transportation & Logistics</h4>
                       <p class="mb-0">Experience efficient and reliable cargo movement tailored to your needs, delivering on time, every time.</p>
@@ -114,7 +114,7 @@
                 <!--/column -->
                 <div class="col-md-6">
                   <div class="card bg-pale-leaf">
-                    <div class="card-body">
+                    <div class="card-body card-services">
                       <img src="./assets/img/icons/lineal/paper-plane.svg" class="svg-inject icon-svg icon-svg-sm text-primary" alt="" />
                       <h4>Export & Import</h4>
                       <p class="mb-0">Navigate global trade effortlessly with our expert guidance, ensuring smooth transactions and compliance.</p>
@@ -126,7 +126,7 @@
                 <!--/column -->
                 <div class="col-md-6 align-self-start">
                   <div class="card bg-pale-primary">
-                    <div class="card-body">
+                    <div class="card-body card-services">
                       <img src="./assets/img/icons/lineal/shield.svg" class="svg-inject icon-svg icon-svg-sm text-primary" alt="" />
                       <h4>Custom Clearance</h4>
                       <p class="mb-0">Simplify the complexities of customs processes with our dedicated services, minimizing delays and ensuring regulatory compliance.</p>
