--- a/insinhoputrapratama/projects.html
+++ b/insinhoputrapratama/projects.html
@@ -57,156 +57,27 @@
     <!-- /header -->
     <!-- /section -->
     <section class="wrapper bg-light">
-      <div class="container py-14 py-md-16 text-center">
-        <div class="grid grid-view projects-masonry">
-          <div class="isotope-filter filter mb-10">
-            <ul>
-              <li><a class="filter-item active" data-filter="*">All</a></li>
-              <li><a class="filter-item" data-filter=".shipment">Shipments</a></li>
-              <li><a class="filter-item" data-filter=".logistic">Logistics</a></li>
-            </ul>
-          </div>
-          <div class="row gx-md-6 gy-6 isotope">
-            <div class="project item col-md-6 col-xl-4 shipment">
-              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo1.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo1.webp" alt="" /></a>
-                <figcaption>
-                  <h5 class="from-top mb-0">Fringilla Nullam</h5>
-                </figcaption>
-              </figure>
-            </div>
-            <!-- /.project -->
-            <div class="project item col-md-6 col-xl-4 logistic">
-              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo2.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo2.webp" alt="" /></a>
-                <figcaption>
-                  <h5 class="from-top mb-0">Ridiculus Parturient</h5>
-                </figcaption>
-              </figure>
-            </div>
-            <!-- /.project -->
-            <div class="project item col-md-6 col-xl-4 logistic">
-              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo3.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo3.webp" alt="" /></a>
-                <figcaption>
-                  <h5 class="from-top mb-0">Ornare Ipsum</h5>
-                </figcaption>
-              </figure>
-            </div>
-            <!-- /.project -->
-            <div class="project item col-md-6 col-xl-4 logistic">
-              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo4.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo4.webp" alt="" /></a>
-                <figcaption>
-                  <h5 class="from-top mb-0">Nullam Mollis</h5>
-                </figcaption>
-              </figure>
-            </div>
-            <!-- /.project -->
-            <div class="project item col-md-6 col-xl-4 logistic">
-              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo5.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo5.webp" alt="" /></a>
-                <figcaption>
-                  <h5 class="from-top mb-0">Euismod Risus</h5>
-                </figcaption>
-              </figure>
-            </div>
-            <!-- /.project -->
-            <div class="project item col-md-6 col-xl-4 logistic">
-              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo6.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo6.webp" alt="" /></a>
-                <figcaption>
-                  <h5 class="from-top mb-0">Ridiculus Tristique</h5>
-                </figcaption>
-              </figure>
-            </div>
-            <!-- /.project -->
-            <div class="project item col-md-6 col-xl-4 logistic">
-              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo7.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo7.webp" alt="" /></a>
-                <figcaption>
-                  <h5 class="from-top mb-0">Sollicitudin Pharetra</h5>
-                </figcaption>
-              </figure>
-            </div>
-            <!-- /.project -->
-            <!-- /.project -->
-            <div class="project item col-md-6 col-xl-4 logistic">
-              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo8.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo8.webp" alt="" /></a>
-                <figcaption>
-                  <h5 class="from-top mb-0">Sollicitudin Pharetra</h5>
-                </figcaption>
-              </figure>
-            </div>
-            <!-- /.project -->
-            <!-- /.project -->
-            <div class="project item col-md-6 col-xl-4 logistic">
-              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo9.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo9.webp" alt="" /></a>
-                <figcaption>
-                  <h5 class="from-top mb-0">Sollicitudin Pharetra</h5>
-                </figcaption>
-              </figure>
-            </div>
-            <!-- /.project -->
-            <!-- /.project -->
-            <div class="project item col-md-6 col-xl-4 logistic">
-              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo10.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo10.webp" alt="" /></a>
-                <figcaption>
-                  <h5 class="from-top mb-0">Sollicitudin Pharetra</h5>
-                </figcaption>
-              </figure>
-            </div>
-            <!-- /.project -->
-            <!-- /.project -->
-            <div class="project item col-md-6 col-xl-4 logistic">
-              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo11.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo11.webp" alt="" /></a>
-                <figcaption>
-                  <h5 class="from-top mb-0">Sollicitudin Pharetra</h5>
-                </figcaption>
-              </figure>
-            </div>
-            <!-- /.project -->
-            <!-- /.project -->
-            <div class="project item col-md-6 col-xl-4 logistic">
-              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo12.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo12.webp" alt="" /></a>
-                <figcaption>
-                  <h5 class="from-top mb-0">Sollicitudin Pharetra</h5>
-                </figcaption>
-              </figure>
-            </div>
-            <!-- /.project -->
-            <!-- /.project -->
-            <div class="project item col-md-6 col-xl-4 shipment">
-              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo13.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo13.webp" alt="" /></a>
-                <figcaption>
-                  <h5 class="from-top mb-0">Sollicitudin Pharetra</h5>
-                </figcaption>
-              </figure>
-            </div>
-            <!-- /.project -->
-            <!-- /.project -->
-            <div class="project item col-md-6 col-xl-4 shipment">
-              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo14.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo14.webp" alt="" /></a>
-                <figcaption>
-                  <h5 class="from-top mb-0">Sollicitudin Pharetra</h5>
-                </figcaption>
-              </figure>
-            </div>
-            <!-- /.project -->
-            <!-- /.project -->
-            <div class="project item col-md-6 col-xl-4 logistic">
-              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo15.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo15.webp" alt="" /></a>
-                <figcaption>
-                  <h5 class="from-top mb-0">Sollicitudin Pharetra</h5>
-                </figcaption>
-              </figure>
-            </div>
-            <!-- /.project -->
-            <!-- /.project -->
-            <div class="project item col-md-6 col-xl-4 logistic">
-              <figure class="overlay overlay-1 rounded"><a href="./assets/img/photos/photo16.webp" data-glightbox data-gallery="shots-group"> <img src="./assets/img/photos/photo16.webp" alt="" /></a>
-                <figcaption>
-                  <h5 class="from-top mb-0">Sollicitudin Pharetra</h5>
-                </figcaption>
-              </figure>
-            </div>
-            <!-- /.project -->
-          </div>
-          <!-- /.row -->
-        </div>
+      <div class="container py-14 py-md-16">
+        <swiper-container class="mySwiper rounded" auto-height="true" space-between="20" navigation="true" pagination="true"
+    pagination-clickable="true">
+          <swiper-slide class="rounded"><img src="./assets/img/photos/photo1.webp" alt=""></swiper-slide>
+          <swiper-slide><img src="./assets/img/photos/photo2.webp" alt=""></swiper-slide>
+          <swiper-slide><img src="./assets/img/photos/photo3.webp" alt=""></swiper-slide>
+          <swiper-slide><img src="./assets/img/photos/photo4.webp" alt=""></swiper-slide>
+          <swiper-slide><img src="./assets/img/photos/photo5.webp" alt=""></swiper-slide>
+          <swiper-slide><img src="./assets/img/photos/photo6.webp" alt=""></swiper-slide>
+          <swiper-slide><img src="./assets/img/photos/photo6.webp" alt=""></swiper-slide>
+          <swiper-slide><img src="./assets/img/photos/photo7.webp" alt=""></swiper-slide>
+          <swiper-slide><img src="./assets/img/photos/photo8.webp" alt=""></swiper-slide>
+          <swiper-slide><img src="./assets/img/photos/photo9.webp" alt=""></swiper-slide>
+          <swiper-slide><img src="./assets/img/photos/photo10.webp" alt=""></swiper-slide>
+          <swiper-slide><img src="./assets/img/photos/photo11.webp" alt=""></swiper-slide>
+          <swiper-slide><img src="./assets/img/photos/photo12.webp" alt=""></swiper-slide>
+          <swiper-slide><img src="./assets/img/photos/photo13.webp" alt=""></swiper-slide>
+          <swiper-slide><img src="./assets/img/photos/photo14.webp" alt=""></swiper-slide>
+          <swiper-slide><img src="./assets/img/photos/photo15.webp" alt=""></swiper-slide>
+          <swiper-slide><img src="./assets/img/photos/photo16.webp" alt=""></swiper-slide>
+        </swiper-container>
       </div>
     </section>
     
@@ -278,6 +149,7 @@
   </div>
   <script src="./assets/js/plugins.js"></script>
   <script src="./assets/js/theme.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 </body>
 
 </html>
