--- a/insinhoputrapratama/contact.html
+++ b/insinhoputrapratama/contact.html
@@ -152,18 +152,13 @@
         <!-- /column -->
         <div class="swiper-container clients mb-0" data-margin="30" data-dots="false" data-loop="true" data-autoplay="true" data-autoplaytime="1" data-drag="false" data-speed="5000" data-items-xxl="7" data-items-xl="6" data-items-lg="5" data-items-md="4" data-items-xs="2">
           <div class="swiper">
-            <div class="swiper-wrapper ticker">
-              <div class="swiper-slide px-5"><img src="./assets/img/brands/c1.png" alt="" /></div>
-              <div class="swiper-slide px-5"><img src="./assets/img/brands/c2.png" alt="" /></div>
-              <div class="swiper-slide px-5"><img src="./assets/img/brands/c3.png" alt="" /></div>
-              <div class="swiper-slide px-5"><img src="./assets/img/brands/c4.png" alt="" /></div>
-              <div class="swiper-slide px-5"><img src="./assets/img/brands/c5.png" alt="" /></div>
-              <div class="swiper-slide px-5"><img src="./assets/img/brands/c6.png" alt="" /></div>
-              <div class="swiper-slide px-5"><img src="./assets/img/brands/c7.png" alt="" /></div>
-              <div class="swiper-slide px-5"><img src="./assets/img/brands/c8.png" alt="" /></div>
-              <div class="swiper-slide px-5"><img src="./assets/img/brands/c9.png" alt="" /></div>
-              <div class="swiper-slide px-5"><img src="./assets/img/brands/c10.png" alt="" /></div>
-              <div class="swiper-slide px-5"><img src="./assets/img/brands/c11.png" alt="" /></div>
+            <div class="swiper-wrapper ticker brand-swiper">
+                <div class="swiper-slide px-5"><img src="./assets/img/brands/kemenhub_logo.webp" alt="" /></div>
+                <div class="swiper-slide px-5"><img src="./assets/img/brands/kementrian_kelautan_logo.webp" alt="" /></div>
+                <div class="swiper-slide px-5"><img src="./assets/img/brands/proskuneo_logo.webp" alt="" /></div>
+                <div class="swiper-slide px-5"><img src="./assets/img/brands/wika_gedung_logo_1.webp" alt="" /></div>
+                <div class="swiper-slide px-5"><img src="./assets/img/brands/wika_industri_logo.webp" alt="" /></div>
+                <div class="swiper-slide px-5"><img src="./assets/img/brands/wika_logo.webp" alt="" /></div>
             </div>
             <!--/.swiper-wrapper -->
           </div>
