--- a/insinhoputrapratama/index.html
+++ b/insinhoputrapratama/index.html
@@ -230,11 +230,11 @@
                 <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/proskuneo_logo.webp" alt="" /></figure>
               </div>
               <!--/column -->
-              <div class="col">
+              <div class="col brand-swiper">
                 <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/wika_gedung_logo_1.webp" alt="" /></figure>
               </div>
               <!--/column -->
-              <div class="col">
+              <div class="col brand-swiper">
                 <figure class="px-3 px-md-0 px-xxl-2"><img src="./assets/img/brands/wika_industri_logo.webp" alt="" /></figure>
               </div>
               <!--/column -->
