--- a/insinhoputrapratama/clients.html
+++ b/insinhoputrapratama/clients.html
@@ -107,7 +107,7 @@
             <!-- /column -->
           </div>
           <!-- /.row -->
-          <div class="row row-cols-2 row-cols-md-3 row-cols-xl-3 gx-lg-6 gy-6 justify-content-center">
+          <div class="row row-cols-2 row-cols-md-3 row-cols-xl-3 gx-lg-6 gy-6 justify-content-center brand-swiper">
             <div class="col">
               <div class="card shadow-lg h-100 align-items-center">
                 <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
@@ -138,7 +138,7 @@
               <!--/.card -->
             </div>
             <!--/column -->
-            <div class="col">
+            <div class="col brand-swiper">
               <div class="card shadow-lg h-100 align-items-center">
                 <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
                   <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/wika_gedung_logo_1.webp" alt="" /></figure>
@@ -148,7 +148,7 @@
               <!--/.card -->
             </div>
             <!--/column -->
-            <div class="col">
+            <div class="col brand-swiper">
               <div class="card shadow-lg h-100 align-items-center">
                 <div class="card-body align-items-center d-flex px-3 py-6 p-md-8">
                   <figure class="px-md-3 px-xl-0 px-xxl-3 mb-0"><img src="./assets/img/brands/wika_industri_logo.webp" alt="" /></figure>
